@@ -1,3 +1,5 @@
+20.jan (mi)
+      - support for 'upside down' tablatures (lowest string on top)
 19.jan (lv)
       - MusicXML import fixes: slurs and wedges
 18.jan (ws)
